--- a/prompts/problem-solvers/write.tmpl
+++ b/prompts/problem-solvers/write.tmpl
@@ -1,10 +1,10 @@
 Background: We are researching how people communicate when they have problems.
 
 Prompt:
-- Imagine you live in ${location}
+- Imagine you live in <%- location %>
 
-for problem in problems
-- Imagine ${problem}
+<% _.forEach(problems, function(p) { %> - <%- p %>\r\n<% }); %>
+
 
 Response:
 - Write an email convincing an imaginary official to should fix this problem.
