--- a/prompts/media/find.tmpl
+++ b/prompts/media/find.tmpl
@@ -1,9 +1,9 @@
 Background: We are researching how people communicate with the media.
 
 Prompt:
-- Imagine you live in <%- location %> 
+- Imagine you live in <%= location %>
 
-<% _.forEach(problems, function(p) { %> - <%- p %>\r\n<% }); %>
+<% _.forEach(problems, function(p) { %> - <%= p %>\r\n<% }); %>
 
 Response:
 - Using the internet, make a list of the 5 most relevant people in the media you would contact to cover this as a story.
