flesh it out more

--- a/scripts/prompts/media/write.tmpl
+++ b/scripts/prompts/media/write.tmpl
@@ -2,8 +2,8 @@ Background: We are researching how people communicate with the media.
 
 Prompt:
 - Imagine you live in <%= location %>
-
-<% _.forEach(problems, function(p) { %> - <%= p %>\r\n<% }); %>
+<% forEach(problems, function(p) { %>- Imagine <%= p %>
+<% }); %>
 
 Response:
 - Write an email convincing an imaginary journalist to cover this story.
