--- a/scripts/prompts/problem-solvers/find.tmpl
+++ b/scripts/prompts/problem-solvers/find.tmpl
@@ -2,9 +2,9 @@ Background: We are researching how people communicate when they have problems.
 
 Prompt:
 - Imagine you live in <%= location %>
-
-<% _.forEach(problems, function(p) { %> - <%= p %>\r\n<% }); %>
+<% forEach(problems, function(p) { %>- Imagine <%= p %>
+<% }); %>
 
 Response:
-- Using the internet, make a list of the 5 most relevant government officials you would contact to send a complaint.
+- Using the internet, make a list of the <%= magnitude %> most relevant government officials you would contact to send a complaint.
 - Include their name and email.
