--- a/scripts/prompts/media/find.tmpl
+++ b/scripts/prompts/media/find.tmpl
@@ -2,9 +2,9 @@ Background: We are researching how people communicate with the media.
 
 Prompt:
 - Imagine you live in <%= location %>
-
-<% _.forEach(problems, function(p) { %> - <%= p %>\r\n<% }); %>
+<% forEach(problems, function(p) { %>- Imagine <%= p %>
+<% }); %>
 
 Response:
-- Using the internet, make a list of the 5 most relevant people in the media you would contact to cover this as a story.
+- Using the internet, make a list of the <%= magnitude %> most relevant people in the media you would contact to cover this as a story.
 - Include their name and email.
