--- a/scripts/prompts/media/write.tmpl
+++ b/scripts/prompts/media/write.tmpl
@@ -9,3 +9,4 @@ Response:
 - Write an email convincing an imaginary journalist to cover this story.
 - Sign the email with the name "YYY TTT"
 - Address the email to "XXX ZZZ"
+- Use at least 100 words
