automate HIT posting

--- a/scripts/prompts/problem-solvers/write.tmpl
+++ b/scripts/prompts/problem-solvers/write.tmpl
@@ -9,4 +9,4 @@ Response:
 - Write an email convincing an imaginary official to should fix this problem.
 - Sign the email with the name "YYY TTT"
 - Address the email to "XXX ZZZ"
-- Use at least 100 words
+- Use at least <%= wordCount %> words
