--- a/scripts/prompts/problem-solvers/find.tmpl
+++ b/scripts/prompts/problem-solvers/find.tmpl
@@ -1,10 +1,10 @@
 Background: We are researching how people communicate when they have problems.
 
 Prompt:
-- Imagine you live in <%= location %>
-<% forEach(problems, function(p) { %>- Imagine <%= p %>
+- Imagine you live in <%= scenario.location %>
+<% forEach(scenario.problems, function(p) { %>- Imagine <%= p %>
 <% }); %>
 
 Response:
-- Using the internet, make a list of the <%= magnitude %> most relevant government officials you would contact to send a complaint.
+- Using the internet, make a list of the <%= options.count %> most relevant government officials you would contact to send a complaint.
 - Include their name and email.
